--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,9 @@ package.tar
 /.phpunit
 
 # Add on
+## Folder and file Symfony
+app/cache/dev/
+app/config/parameters.yml
+app/logs/dev.log
 ## JetBrains IDE Folder
 .idea/
